DutyRoaster Controller end point updated
